# viplanner

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TRAINING.md  formatter.sh  pyproject.toml
.github/: LICENSE_HEADER.txt  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
omniverse/: README.md
omniverse/extension/omni.isaac.matterport/: README.md  setup.py
omniverse/extension/omni.isaac.matterport/config/: extension.toml
omniverse/extension/omni.isaac.matterport/data/mappings/: mpcat40.tsv
omniverse/extension/omni.isaac.matterport/omni/isaac/matterport/config/: __init__.py  importer_cfg.py
omniverse/extension/omni.isaac.matterport/omni/isaac/matterport/domains/: __init__.py  matterport_importer.py  matterport_raycast_camera.py  matterport_raycaster.py  raycaster_cfg.py
omniverse/extension/omni.isaac.matterport/omni/isaac/matterport/scripts/: __init__.py  ext_cfg.py  matterport_domains.py  matterport_ext.py
omniverse/extension/omni.viplanner/: setup.py
omniverse/extension/omni.viplanner/config/: extension.toml
omniverse/extension/omni.viplanner/data/: mpcat40_to_vip_sem.yml
omniverse/extension/omni.viplanner/data/town01/: area_filter_cfg.yaml  cw_multiply_cfg.yml  keyword_mapping.yml  people_cfg.yml  vehicle_cfg.yml
omniverse/extension/omni.viplanner/data/town02/: cw_multiply_cfg.yml  keyword_mapping.yml  vehicle_cfg.yml
omniverse/extension/omni.viplanner/data/warehouse/: keyword_mapping.yml  people_cfg.yml  warehouse_new.usd
omniverse/extension/omni.viplanner/intern/carla_exploration/: config.py  explorer.py
omniverse/extension/omni.viplanner/intern/extension_scripts/: __init__.py  eval_cfg.py  evaluator.py  vip_algo.py  vip_anymal.py  vip_config.py  visual_imperative_planner.py  walking_cfg.py
omniverse/extension/omni.viplanner/intern/matterport_exploration/: __init__.py  random_exploration.py  sampler_config.py
omniverse/extension/omni.viplanner/intern/run_scripts/: anymal_run_carla.py  anymal_run_warehouse.py
omniverse/extension/omni.viplanner/omni/viplanner/collectors/: __init__.py  terrain_analysis.py  terrain_analysis_cfg.py  utils.py  viewpoint_sampling.py  viewpoint_sampling_cfg.py
omniverse/extension/omni.viplanner/omni/viplanner/config/: __init__.py  base_cfg.py  carla_cfg.py  carla_class_cost.py  matterport_cfg.py  matterport_class_cost.py  warehouse_cfg.py
omniverse/extension/omni.viplanner/omni/viplanner/utils/: __init__.py  unreal_importer.py  unreal_importer_cfg.py  viplanner_matterport_raycast_camera.py
omniverse/extension/omni.viplanner/omni/viplanner/viplanner/: __init__.py  viplanner_algo.py
omniverse/extension/omni.viplanner/omni/viplanner/viplanner/mdp/: __init__.py  observations.py  terminations.py
omniverse/extension/omni.viplanner/omni/viplanner/viplanner/mdp/actions/: __init__.py  navigation_actions.py
omniverse/extension/omni.viplanner/omni/viplanner/viplanner/mdp/commands/: __init__.py  path_follower_command_generator.py  path_follower_command_generator_cfg.py
omniverse/extension/omni.waypoints/: setup.py
omniverse/extension/omni.waypoints/config/: extension.toml
omniverse/extension/omni.waypoints/omni/isaac/waypoints/recorder/: __init__.py  recorder.py
omniverse/extension/omni.waypoints/omni/isaac/waypoints/scripts/: __init__.py  recorder_ui.py
omniverse/standalone/: data_collect.py  viplanner_demo.py
ros/: INSTALL.md  README.md
ros/joystick_drivers/joy/: README.md  mainpage.dox  package.xml
ros/joystick_drivers/joy/migration_rules/: Joy.bmr
ros/joystick_drivers/joy/scripts/: joy_remap.py
ros/joystick_drivers/joy/src/: joy_node.cpp
ros/joystick_drivers/joy/test/: test_joy_msg_migration.py
ros/joystick_drivers/joy/test/saved/: Joy.saved
ros/joystick_drivers/ps3joy/: CMakeLists.txt  README.md  diagnostics.yaml  package.xml
ros/joystick_drivers/ps3joy/doc/: bluetooth_devices.md  testing.md  troubleshooting.md
ros/joystick_drivers/ps3joy/launch/: ps3.launch
ros/joystick_drivers/ps3joy/scripts/: ps3joy.py  ps3joy_node.py  ps3joysim.py
ros/joystick_drivers/ps3joy/src/: sixpair.c
ros/pathFollower/: CMakeLists.txt  README.md  package.xml
ros/pathFollower/launch/: path_follower.launch
ros/pathFollower/src/: pathFollower.cpp
ros/planner/: CMakeLists.txt  package.xml
ros/planner/config/: anymal_c.yaml  anymal_d.yaml  anymal_mount.yaml
ros/planner/launch/: rosbag_rec_anymal_c.launch  rosbag_rec_anymal_d.launch  rosbag_rec_anymal_mount.launch  viplanner.launch
ros/planner/rviz/: default.rviz  legged_robot.rviz
ros/planner/src/: m2f_inference.py  vip_inference.py  viplanner_node.py
ros/planner/utils/: rosutil.py
ros/viplanner_pkgs/: CMakeLists.txt  package.xml
ros/visualizer/: CMakeLists.txt  CMakeLists_open3d.txt  README.md  package.xml
ros/visualizer/config/: viz_config_depth_anymal_c.yaml  viz_config_depth_anymal_d.yaml  viz_config_rgb_anymal_c.yaml  viz_config_rgb_anymal_d.yaml
ros/visualizer/launch/: viplannerViz.launch
ros/visualizer/src/: viplannerViz.cpp  viplannerViz_open3d.cpp
ros/waypoint_rviz_plugin/: README.md  package.xml
ros/waypoint_rviz_plugin/include/: waypoint_tool.h
ros/waypoint_rviz_plugin/src/: waypoint_tool.cpp
viplanner/: __init__.py  cost_builder.py  depth_reconstruct.py  train.py
viplanner/config/: __init__.py  coco_sem_meta.py  costmap_cfg.py  learning_cfg.py  viplanner_sem_meta.py
viplanner/cost_maps/: __init__.py  cost_to_pcd.py  sem_cost_map.py  tsdf_cost_map.py
viplanner/plannernet/: PlannerNet.py  __init__.py  autoencoder.py  rgb_encoder.py
viplanner/traj_cost_opt/: __init__.py  traj_cost.py  traj_opt.py  traj_viz.py
viplanner/utils/: __init__.py  dataset.py  eval_utils.py  torchutil.py  trainer.py
