<?xml version="1.0"?>
<package format="2">
  <name>viplanner_node</name>
  <version>1.0.0</version>
  <description>A ROS wrapper for Visual Imperative Planner (VIPlanner) package</description>

  <maintainer email="rothpa@ethz.ch">Pascal Roth</maintainer>
  <author email="fanyang1@ethz.ch">Fan Yang</author>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>python-numpy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>python-numpy</build_export_depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
